first kinda working version.